--- a/src/_data/company.yml
+++ b/src/_data/company.yml
@@ -30,6 +30,8 @@ conf_capital: "20000"
 conf_headOffice: "#{conf_address} #{conf_zipCode} #{conf_city}"
 conf_rcs: "Paris B 123 456 789"
 conf_hebergement: gandi
+gandi: "<h2>Gandi</h2><p>Société par actions simplifiée au capital 300 000 €,<br>Dont le siège social est établi 63 Boulevard Massena 75013 Paris<br>Immatriculée au Registre du Commerce et des Sociétés sous le numéro RCS Paris B 423 093 459</p>"
+hebergement: $gandi
 
 website: 290
 # conf_hebergement: ovh
